--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -1,16 +1,12 @@
-<!-- Hero Section -->
 <section class="hero">
   <div class="hero-content">
-    <h1>אתגרי כושר ובריאות שיעזרו לך לשפר את החיים!</h1>
-    <p>הצטרפי עכשיו לאתגרים ותראי איך הגוף והנפש שלך משתפרים!</p>
-    <div class="hero-buttons">
-      <button (click)="navigateTo('challenges')">צפה בכל האתגרים</button>
-      <button (click)="navigateTo('/register')">הצטרפי לאתגר</button>
-      <button (click)="navigateTo('createChallenge')">העלאת אתגר</button>
-      <button (click)="navigateTo('signup')">הרשמה</button>
+    <h1>💪 אתגרי כושר ובריאות: המקום שלך לשינוי אמיתי! 💚</h1>
+    
+    <p class="subtitle-text">
+      הצטרפו לקהילה שלנו וגלו מגוון אתגרים קצרים וארוכים שיעזרו לכם לשפר את הכושר, התזונה והבריאות הנפשית. אנחנו כאן כדי ללוות אתכם צעד אחר צעד בדרך לחיים בריאים ומאושרים יותר.
+    </p>
+
     </div>
-  </div>
 </section>
 
-<!-- הקרוסלה החדשה והמגניבה של האתגרים הפופולריים ביותר (לפי לייקים) -->
 <app-popular-challenges></app-popular-challenges>
