--- a/src/app/component/nav/nav.component.html
+++ b/src/app/component/nav/nav.component.html
@@ -6,8 +6,7 @@
         <a routerLink="createChallenge">העלאת אתגר</a>
         
         @if (isLoggedIn$ | async) {
-            <a routerLink="profile">👤 Profile</a>
-            
+            <a routerLink="profile"> Profile</a>
             <a routerLink="signout"> Signout</a> 
             
             } @else {
