--- a/src/app/component/profile/profile.component.html
+++ b/src/app/component/profile/profile.component.html
@@ -1,6 +1,12 @@
 <div class="profile-container">
     <h2>👤 אזור הפרופיל שלי</h2>
     
+    @if (currentUsername) {
+        <p class="welcome-message">
+            שלום, **{{ currentUsername }}**! ברוך הבא לאזור הפרופיל שלך.
+        </p>
+    }
+    
     @if (isLoading) {
        <div class="loading-message">טוען...</div>
     } 
