--- a/src/app/component/uploaded-challenges/uploaded-challenges.component.html
+++ b/src/app/component/uploaded-challenges/uploaded-challenges.component.html
@@ -1,5 +1,5 @@
 <div class="uploaded-challenges-container">
-    <h3>האתגרים שיצרתי</h3>
+    <h1 class="component-title">אתגרים שיצרתי 🛠️</h1>
 
     @if (loading) {
         <div class="loading-state">
@@ -15,16 +15,26 @@
             @for (challenge of uploadedChallenges$ | async; track challenge.id) {
                 <div class="challenge-card">
                     
-                    <h4>
-                       <a [routerLink]="['/challenge', challenge.id]" class="details-button">   
-                        {{ challenge.name }}                         
-                        </a>
+                    <a [routerLink]="['/challenge', challenge.id]" class="card-overlay-link" title="{{ challenge.name }}"></a>
+                    
+                    <h4 class="challenge-name">
+                        {{ challenge.name }}
                     </h4>
                     
+                    <p class="challenge-description">
+                         {{ challenge.description | slice:0:100 }}...
+                    </p>
                     
-                    <div class="details">
-                        <span>🗓️ תאריך העלאה: {{ challenge.date | date: 'dd/MM/yyyy' }}</span>
+                    <div class="challenge-stats">
+                        <span class="stat-item date">
+                            🗓️ העלאה: {{ challenge.date | date: 'dd/MM/yyyy' }}
+                        </span>
+                        
+                        <span class="stat-item likes">
+                            👍 {{ challenge.likeCount }}
+                        </span>
                     </div>
+
                 </div>
             } @empty {
                 <div class="empty-state">
